--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2216,8 +2216,8 @@ span.page-views {
                     position: relative;
                     width: 30px;
                     height: 30px;
-                   float: right;
-                    margin-left: 10px;
+                   float: left;
+                    
 
                     .heartproject{
                       position:relative;
