--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2214,7 +2214,7 @@ span.page-views {
           
             .container-like{
                     position: relative;
-                    width: 30px;
+                    width: 80px;
                     height: 30px;
                    float: left;
                     
@@ -2224,6 +2224,7 @@ span.page-views {
                       color:#8e44ad; 
                       font-size: 30px;
                       display: block;
+                      float: right;
                     }
 
                     .heartgrey{
@@ -2231,10 +2232,12 @@ span.page-views {
                       color:#C8C8C8; 
                       font-size: 30px;
                        display: block;
-                      
+                       float: right;
                      
                     }
-                    
+                   .likelabel{
+                      line-height: 29px;
+                    }
 
                     div.heartnumber{
                       z-index: 3;
