--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -270,7 +270,20 @@ if ($this->countDownloadsOverall > 0) {
                         </span>
                         
                     </div>
-
+                        
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>
+                    <div class="col-md-1 text-right cell-default">
+                        <span><?= round($product['laplace_score'],2) ?></span>
+                    </div>
+                    <div class="col-md-1 text-right cell-default">
+                        <span><?php print($currency->toCurrency( ($product['num_downloads'] * $product['dl_pling_factor'] / 100) * $product['laplace_score'])); ?></span>
+                    </div>
+<?php
+        }
+?>
+                    
                     <div class="col-md-1 text-right cell-default">
                         <?php
                             $show_plings_sum = $sum_plings;
@@ -330,7 +343,6 @@ if ($this->countDownloadsOverall > 0) {
             $sum_total_month_view = number_format($sum_total_month);
             ?>
             <div class='row row-total'>
-                
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
 ?>                
@@ -341,12 +353,13 @@ if ($this->countDownloadsOverall > 0) {
                 <div class='col-md-9 text-right'><?=$sum_total_text?></div>
 <?php
         }
-?>                
+?>            
+                
                 <div class='col-md-1 text-right'><strong style="color: green;"><?=$sum_total_payout?></strong></div>
                 
 <?php
         if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
-?>                 
+?>                
                 <div class='col-md-1 text-right'><strong><?=$sum_total_payout_score?></strong></div>
 <?php
         }
