--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1821,7 +1821,29 @@ ul.meta-nav-top
           
         }
 
+        div.projectdtailHeart{
+            float: right;           
+         
+            margin-right: 5px;
+            width: 80px;
+            
+            .container-pling{
+              position: relative;              
+              width: 80px;
+              .partialbuttonfollowproject{
+                 text-align: center;
+                 width: 80px;
+                 height: 45px;
+              }
+              .partialbuttonplingproject
+              {
+                text-align: center;
+              }
 
+            }
+        }
+
+        /*
         div.projectdtailHeart{
             float: right;           
             z-index: 100;
@@ -1843,21 +1865,12 @@ ul.meta-nav-top
 
             }
         }
-        .heartproject{
+          .heartproject{
           position:relative;
           color:#8e44ad; 
-          font-size: 45px;
+          font-size: 25px;
           display: block;
         }
-
-        .heartgrey{
-          position:relative;
-          color:#C8C8C8; 
-          font-size: 45px;
-           display: block;
-         
-        }
-       
 
         div.heartnumber{
           z-index: 3;
@@ -1865,8 +1878,30 @@ ul.meta-nav-top
           top: -32px;         
           display: block;
           margin: auto;
-          color:#fff;
+        
         }
+        */
+        .heartproject{
+        
+          color:#8e44ad; 
+          font-size: 25px;
+          display: block;
+          float: right;
+        }
+
+        .heartgrey{
+          position:relative;
+          color:#C8C8C8; 
+          font-size: 25px;
+           display: block;
+          float: right;
+        }
+        div.heartnumber{
+        
+        }
+       
+
+        
         span.plingcircle{
             width: 30px;
             height: 30px;
@@ -1886,8 +1921,8 @@ ul.meta-nav-top
              color: #EE6E09;
         }
 
-        span.plingtext{
-            width: 45px;
+        div.plingtext{
+            line-height: 25px;
 
         }
 
