--- a/application/modules/default/views/scripts/product/partials/projectlike.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectlike.phtml
@@ -42,10 +42,10 @@ $out ='<div role="button" class="partialbuttonfollowproject" '.$heartatt.'>';
 
  if ($isFollower){         
       $out = $out. '<i class="plingheart fa fa-check heartproject " aria-hidden="true"></i>';      
-      $out = $out. '<div class="plingtext heartnumber  small"> '.$cntheart.'  Fans </div>';
+      $out = $out. '<div class="plingtext heartnumber  "> '.$cntheart.'  Fans </div>';
  } else{                  
       $out = $out. '<i class="plingheart fa fa-check heartgrey " aria-hidden="true"></i>';      
-      $out = $out. '<div class="plingtext heartnumber small "> '.$cntheart.'  Fans</div>';
+      $out = $out. '<div class="plingtext heartnumber  "> '.$cntheart.'  Fans</div>';
  }
 
  $out = $out.'</div>';
