--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1923,7 +1923,7 @@ ul.meta-nav-top
 
         div.plingtext{
             line-height: 25px;
-
+            font-size: 10pt;
         }
 
         div.heartnumberpurple{
