--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1843,7 +1843,7 @@ ul.meta-nav-top
             }
         }
 
-        /*
+     
         div.projectdtailHeart{
             float: right;           
             z-index: 100;
@@ -1868,7 +1868,7 @@ ul.meta-nav-top
           .heartproject{
           position:relative;
           color:#8e44ad; 
-          font-size: 25px;
+          font-size: 45px;
           display: block;
         }
 
@@ -1878,9 +1878,17 @@ ul.meta-nav-top
           top: -32px;         
           display: block;
           margin: auto;
-        
+          color: #fff;
         }
-        */
+
+        .heartgrey{
+            position: relative;
+            color: #C8C8C8;
+            font-size: 45px;
+            display: block;
+        }
+
+           /*
         .heartproject{
         
           color:#8e44ad; 
@@ -1900,7 +1908,7 @@ ul.meta-nav-top
         
         }
        
-
+        */
         
         span.plingcircle{
             width: 30px;
@@ -1922,8 +1930,7 @@ ul.meta-nav-top
         }
 
         div.plingtext{
-            line-height: 25px;
-            font-size: 10pt;
+           
         }
 
         div.heartnumberpurple{
