--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -126,14 +126,34 @@ if ($this->countDownloadsOverall > 0) {
 }
 ?>
 </ul>
+
 <div class="container-fluid margin-bottom-12" style="padding-left: 0; padding-right: 0;">
     <div class="row">
         <div class="col-md-1"></div>
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>                    
+        <div class="col-md-4 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+<?php
+        } else {
+?>
         <div class="col-md-6 text-left text-uppercase nowrap" style="white-space: nowrap;"><strong>Products</strong></div>
+<?php
+        }
+?>        
         <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Downloads</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Downloads" data-trigger="hover" data-html="true" data-content="Sum of all downloads of all files (active or archived of this product within this month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Pling-Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Pling-Factor" data-trigger="hover" data-html="true" data-content="The Pling-Factor's base is $-cent and depends on the product category.<br>A factor of '1' means:<br>1 Download equals 1 $-cent."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
-        <!--<div class="col-md-2 text-right text-uppercase"><strong>plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="plings" data-trigger="hover" data-html="true" data-content="You can collect new plings every month. The number of plings results from the pling factor. At the beginning of each month you will be paid the plings of the previous month to your PayPal account. Where: <b>1 pling = $0.01</b>.<br>A valid PayPal address must be maintained in your settings and the payout amount must be at least one dollar. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>-->
         <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong style="color: green;">Payout</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout" data-trigger="hover" data-html="true" data-content="This shows the amount that will be paid out to you until May 2019."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>
+        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Score-Factor</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Score" data-trigger="hover" data-html="true" data-content="The product score."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+        <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Payout</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout" data-trigger="hover" data-html="true" data-content="The payout amount."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
+<?php        
+        }
+?>        
+        
         <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong>Plings</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Plings" data-trigger="hover" data-html="true" data-content="Plings = 1 System Pling + Supporter Plings for that product."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
         <div class="col-md-1 text-right text-uppercase nowrap" style="white-space: nowrap;"><strong style="color: red;">Payout-New**</strong><div class="inline" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="Payout-New" data-trigger="hover" data-html="true" data-content="This new Payout will become active in May 2019."><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span></div></div>
     </div>
@@ -155,7 +175,7 @@ if ($this->countDownloadsOverall > 0) {
         } else {
             $isCurrentMonth = false;
         }
-        
+        $sum_total_month_score = 0;
         $sum_total_month = 0;
         $sum_total_month_new = 0;
         $sum_total_text = '';
@@ -174,7 +194,18 @@ if ($this->countDownloadsOverall > 0) {
                             <img src="<?php echo $helpImage->Image($product['image_small'], array('width' => 80, 'height' => 65)); ?> " height="81" width="101"/>
                         </a>
                     </div>
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>                    
+                    <div class="col-md-4 text-left cell-default">
+<?php
+        } else {
+?>
                     <div class="col-md-6 text-left cell-default">
+<?php
+        }
+?>
+                        
                     
                         <a href="<?= $helperBuildProductUrl->buildProductUrl($product['project_id'], ''); ?>">
                             <span style="line-height: 3em;"><?= $product['title']; ?></span>
@@ -187,6 +218,7 @@ if ($this->countDownloadsOverall > 0) {
                     <div class="col-md-1 text-right cell-default">
                         <span><?= $product['dl_pling_factor'] ?></span>
                     </div>
+                    
                     <?php /*
                     <div class="col-md-2 text-right cell-default">
                         <span><?= $product['num_downloads'] * $product['dl_pling_factor'] ?></span>
@@ -238,6 +270,19 @@ if ($this->countDownloadsOverall > 0) {
                         </span>
                         
                     </div>
+                        
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>
+                    <div class="col-md-1 text-right cell-default">
+                        <span><?= round($product['laplace_score'],2) ?></span>
+                    </div>
+                    <div class="col-md-1 text-right cell-default">
+                        <span><?php print($currency->toCurrency( ($product['num_downloads'] * $product['dl_pling_factor'] / 100) * $product['laplace_score'])); ?></span>
+                    </div>
+<?php
+        }
+?>
                     
                     <div class="col-md-1 text-right cell-default">
                         <?php
@@ -275,7 +320,8 @@ if ($this->countDownloadsOverall > 0) {
 
                 </div>
                 <?php
-                
+                $sum_total_month_score += ($product['num_downloads'] * $product['dl_pling_factor'] / 100) * $product['laplace_score'];
+                $sum_total_payout_score = $currency->toCurrency($sum_total_month_score);
                 if(!$showErrMsg) {       
                     $sum_total_month += $payout_sum;
                     $sum_total_payout = $currency->toCurrency($sum_total_month);
@@ -297,7 +343,30 @@ if ($this->countDownloadsOverall > 0) {
             $sum_total_month_view = number_format($sum_total_month);
             ?>
             <div class='row row-total'>
-                <div class='col-md-9 text-right'><?=$sum_total_text?></div><div class='col-md-1 text-right'><strong style="color: green;"><?=$sum_total_payout?></strong></div><div class='col-md-1 text-right'></div><div class='col-md-1 text-right'><strong style="color: red;"><?=$sum_total_payout_new?></strong></div>
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>                
+                <div class='col-md-7 text-right'><?=$sum_total_text?></div>
+<?php
+        } else {
+?>
+                <div class='col-md-9 text-right'><?=$sum_total_text?></div>
+<?php
+        }
+?>            
+                
+                <div class='col-md-1 text-right'><strong style="color: green;"><?=$sum_total_payout?></strong></div>
+                
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>                
+                <div class='col-md-1 text-right'></div>
+                <div class='col-md-1 text-right'><strong><?=$sum_total_payout_score?></strong></div>
+<?php
+        }
+?>                
+                <div class='col-md-1 text-right'></div>
+                <div class='col-md-1 text-right'><strong style="color: red;"><?=$sum_total_payout_new?></strong></div>
                 
             </div>
             
@@ -345,7 +414,7 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(**) The Payout-New will not become active until May 2019.</p>
+        <p>(**) The Payout-New will become active on May 2019.</p>
     </div>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
