--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -171,6 +171,9 @@ Google fonts
     }
   }
 
+  .pling-danger{
+         background: #C9302C none repeat scroll 0 0;
+  }
   
 
   .standard-form {
@@ -1814,8 +1817,33 @@ ul.meta-nav-top
           float: right; 
           width:150px; 
           z-index: 100;
-          clear: right;
+          
+          
         }
+
+        div.projectdtailHeart{
+            float: right;           
+         
+            margin-right: 5px;
+            width: 80px;
+            
+            .container-pling{
+              position: relative;              
+              width: 80px;
+              .partialbuttonfollowproject{
+                 text-align: center;
+                 width: 80px;
+                 height: 30px;
+              }
+              .partialbuttonplingproject
+              {
+                text-align: center;
+              }
+
+            }
+        }
+
+     
         div.projectdtailHeart{
             float: right;           
             z-index: 100;
@@ -1837,21 +1865,12 @@ ul.meta-nav-top
 
             }
         }
-        .heartproject{
+          .heartproject{
           position:relative;
           color:#8e44ad; 
           font-size: 45px;
           display: block;
         }
-
-        .heartgrey{
-          position:relative;
-          color:#C8C8C8; 
-          font-size: 45px;
-           display: block;
-         
-        }
-       
 
         div.heartnumber{
           z-index: 3;
@@ -1859,8 +1878,38 @@ ul.meta-nav-top
           top: -32px;         
           display: block;
           margin: auto;
-          color:#fff;
+          color: #fff;
         }
+
+        .heartgrey{
+            position: relative;
+            color: #C8C8C8;
+            font-size: 45px;
+            display: block;
+        }
+
+           /*
+        .heartproject{
+        
+          color:#8e44ad; 
+          font-size: 25px;
+          display: block;
+          float: right;
+        }
+
+        .heartgrey{
+          position:relative;
+          color:#C8C8C8; 
+          font-size: 25px;
+           display: block;
+          float: right;
+        }
+        div.heartnumber{
+        
+        }
+       
+        */
+        
         span.plingcircle{
             width: 30px;
             height: 30px;
@@ -1880,15 +1929,16 @@ ul.meta-nav-top
              color: #EE6E09;
         }
 
-        span.plingtext{
-            width: 45px;
-
+        div.plingtext{
+           
         }
 
         div.heartnumberpurple{
           color: #8e44ad;
           
         }
+       
+
       }
     }
 
@@ -2197,6 +2247,67 @@ span.page-views {
           margin: 0 -10px;
         }
     }
+
+      /*
+        div.projectdtailHeart{                  
+            .container-like{
+                    position: relative;
+                    width: 80px;
+                    height: 30px;
+                   float: left;
+                    
+
+                    .heartproject{
+                      position:relative;
+                      color:#8e44ad; 
+                      font-size: 30px;
+                      display: block;
+                      float: right;
+                    }
+
+                    .heartgrey{
+                      position:relative;
+                      color:#C8C8C8; 
+                      font-size: 30px;
+                       display: block;
+                       float: right;
+                     
+                    }
+                   .likelabel{
+                      line-height: 29px;
+                    }
+
+                    div.heartnumber{
+                      z-index: 3;
+                      position: relative;          
+                      top: -24px;         
+                      display: block;                      
+                      color:#fff;
+                      text-align: center;
+                    }
+                     div.heartnumberpurple{
+                      color: #8e44ad;
+                      
+                    }
+            }
+
+            .container-pling{
+              position: relative;                            
+              .partialbuttonfollowproject{
+                 text-align: center;
+                 width: 45px;
+                 height: 45px;
+              }
+              .partialbuttonplingproject
+              {
+                  text-align: center;
+              }
+            }
+        }
+
+        */
+        
+
   }
 
   .prod-widget-box {
@@ -2748,6 +2859,9 @@ span.page-views {
                   color: white;
                   font-size: 12px;
                   padding: 3px 6px;
+              }
+              a.btn.pling-danger{
+                  background-color: #C82333;
               }
             }
           }
