--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -107,6 +107,32 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
             </div>
         </div>
     </div>
+
+
+    <div id="report-product-fraud-<?= $this->product->project_id ?>" class="modal report-product-fraud" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                </div>
+                <form id="product-report-fraud" class="full-width partialjson" action="/report/productfraud/"
+                      data-target="#report-product-fraud-<?= $this->product->project_id ?>-message">
+                    <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
+                    <div id="report-product-fraud-<?= $this->product->project_id ?>-message">
+                        <div style="padding: 20px">Please specify why this product is fraud : 
+                           <textarea class="" id="report-text" name="t" cols="50" rows="3"></textarea>                                                     
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="small">
+                                <span class="glyphicon glyphicon-share-alt"></span> Report
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     
     <?php if (Zend_Auth::getInstance()->hasIdentity()) {       
         ?>
