--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -134,9 +134,43 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
         </div>
     </div>
     
+
+     <div id="report-product-clone-<?= $this->product->project_id ?>" class="modal report-product-clone" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                </div>
+                <form id="product-report-clone" class="full-width partialjson" action="/report/productclone/"
+                      data-target="#report-product-clone-<?= $this->product->project_id ?>-message">
+                    <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
+                    <div id="report-product-clone-<?= $this->product->project_id ?>-message" class="message" style="padding: 20px">
+                        <div>
+                            <label class="form-label">Clone from project ID :  </label><br/>
+                            <input name="pc" onkeyup="this.value=this.value.replace(/[^\d]/,'')"/><br/>
+                            <label class="form-label">OR extern project link : </label><br/>
+                            <input name="l"/>
+                            <br/><br/>
+
+                            <label class="form-label">Message : </label>
+                            <br/>
+                           <textarea class="" id="report-text" name="t" cols="50" rows="3"></textarea>                                                     
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="small">
+                                <span class="glyphicon glyphicon-share-alt"></span> Report
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <?php if (Zend_Auth::getInstance()->hasIdentity()) {       
-        ?>
-    
+        ?>    
     <div id="like-product-modal" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content" style="padding-bottom: 20px">
