--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -103,6 +103,13 @@ $userRoleName = $helperUserRole->userRole();
                     <span class="glyphicon glyphicon-alert"></span> Report Fraud
                 </a>
                 </span>
+                <p>
+                 <span>
+                <a data-toggle="modal" data-target="#report-product-clone-<?= $this->product->project_id ?>" role="button"
+                   href="#report-product-clone-<?= $this->product->project_id ?>">
+                    <span class="glyphicon glyphicon-alert"></span> Report Clone
+                </a>
+                </span>
             </div>
         </div>
     </div>
