--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -147,9 +147,9 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                     <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
                     <div id="report-product-clone-<?= $this->product->project_id ?>-message" class="message" style="padding: 20px">
                         <div>
-                            <label class="form-label">Original product ID on opendesktop :  </label><br/>
+                            <label class="form-label">original product ID on opendesktop :  </label><br/>
                             <input name="pc" onkeyup="this.value=this.value.replace(/[^\d]/,'')"/><br/>
-                            <label class="form-label">OR external link to original product : </label><br/>
+                            <label class="form-label">external link to original product : </label><br/>
                             <input name="l" style="width: 440px;" />
                             <br/><br/>
 
