--- a/application/modules/default/views/scripts/product/partials/details.phtml
+++ b/application/modules/default/views/scripts/product/partials/details.phtml
@@ -100,7 +100,7 @@ $userRoleName = $helperUserRole->userRole();
                 <span style="padding-left: 20px;">
                 <a data-toggle="modal" data-target="#report-product-fraud-<?= $this->product->project_id ?>" role="button"
                    href="#report-product-fraud-<?= $this->product->project_id ?>">
-                    <span class="glyphicon glyphicon-alert"></span> Report Fraud
+                    <span class="glyphicon glyphicon-alert"></span> Report Misuse
                 </a>
                 </span>
                 <p>
