--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -120,7 +120,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                       data-target="#report-product-fraud-<?= $this->product->project_id ?>-message">
                     <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
                     <div id="report-product-fraud-<?= $this->product->project_id ?>-message" class="message" style="padding: 20px">
-                        <div>Please specify why this product is fraud : 
+                        <div>Please specify why this product is misused: 
                            <textarea class="" id="report-text" name="t" cols="50" rows="3"></textarea>                                                     
                         </div>
                         <div class="modal-footer">
@@ -147,13 +147,13 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                     <input type="hidden" name="p" value="<?= $this->product->project_id ?>">
                     <div id="report-product-clone-<?= $this->product->project_id ?>-message" class="message" style="padding: 20px">
                         <div>
-                            <label class="form-label">original product ID on opendesktop :  </label><br/>
+                            <label class="form-label">original product ID on opendesktop:  </label><br/>
                             <input name="pc" onkeyup="this.value=this.value.replace(/[^\d]/,'')"/><br/>
-                            <label class="form-label">external link to original product : </label><br/>
+                            <label class="form-label">external link to original product: </label><br/>
                             <input name="l" style="width: 440px;" />
                             <br/><br/>
 
-                            <label class="form-label">addtional message : </label>
+                            <label class="form-label">addtional message: </label>
                             <br/>
                            <textarea class="" id="report-text" name="t" cols="50" rows="3"></textarea>                                                     
                         </div>
