--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -153,13 +153,13 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                             <input name="l" style="width: 440px;" />
                             <br/><br/>
 
-                            <label class="form-label">Addtional message: </label>
+                            <label class="form-label">Additional message: </label>
                             <br/>
                            <textarea class="" id="report-text" name="t"  rows="3" style="width: 440px;"></textarea>                                                     
                         </div>
                         <div class="modal-footer">
                             <button type="submit" class="small">
-                                <span class="glyphicon glyphicon-share-alt"></span> Report clone
+                                <span class="glyphicon glyphicon-share-alt"></span> add clone
                             </button>
                         </div>
                     </div>
@@ -764,7 +764,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                 <div style="float: right">
                                <a data-toggle="modal" data-target="#report-product-clone-<?= $this->product->project_id ?>" role="button"
                                   href="#report-product-clone-<?= $this->product->project_id ?>">
-                                   <span class="glyphicon glyphicon-alert"></span> Report Clone
+                                   <span class="glyphicon glyphicon-alert"></span> add clone
                                </a>
                                </div>
 
