--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -764,7 +764,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                 <div style="float: right">
                                <a data-toggle="modal" data-target="#report-product-clone-<?= $this->product->project_id ?>" role="button"
                                   href="#report-product-clone-<?= $this->product->project_id ?>">
-                                   <span class="glyphicon glyphicon-alert"></span> add clone
+                                    add clone
                                </a>
                                </div>
 
