--- a/application/modules/default/views/scripts/product/partials/productCloneFrom.phtml
+++ b/application/modules/default/views/scripts/product/partials/productCloneFrom.phtml
@@ -50,7 +50,7 @@ $helpBuildProductUrl = new Default_View_Helper_BuildProductUrl();
                                 <div class='content'>
                                     <div class='title'>
                                         <p><?= $title ?></p>
-                                      
+                                       <p>updated: <?= $this->printDate($product->changed_at) ?></p>
                                     </div>  			                                                  
                                 </div>">
                         <!-- product thumbnail -->
